--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-email: dasdude0325@gmail.com
+email: akromatikus.contact@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A place to show and share various ideas, gadgets, software, and music.
 baseurl: "" # the subpath of your site, e.g. /blog
